[package]
name = "sfmanifest"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.19"
structopt = "0.3.26"
rayon = "1.11.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1", features = ["full"] }